# InfraKit

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  SENTINELAPI_INTEGRATION.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  diagram-assets.yml  docker.yml  publish.yml
diagrams/: arch-diagram.mmd
examples/: README.md
examples/example/: README.md  infrakit.yaml
examples/hello-api/: README.md  infrakit.yaml
examples/hello-api/src/: handler.py
examples/sentinelapi/: README.md  infrakit.yaml
examples/task-manager/: README.md  infrakit.yaml
src/infrakit/cli/: deploy.py  destroy.py  drift.py  init.py  main.py  plan.py  status.py
src/infrakit/core/: config.py  dependency.py  engine.py  session.py
src/infrakit/providers/: alb.py  api_gateway.py  base.py  dns.py  dynamodb.py  ecs.py  elasticache.py  iam.py  lambda_.py  s3.py  sentinelapi.py
src/infrakit/schema/: models.py  validator.py
src/infrakit/state/: backend.py  local.py  s3.py
src/infrakit/utils/: logging.py  output.py  tags.py
tests/: conftest.py
tests/fixtures/: invalid_config.yaml  valid_config.yaml
tests/integration/: test_deploy_flow.py  test_dns_flow.py
tests/unit/: test_base_provider.py  test_cli.py  test_cli_init.py  test_dependency.py  test_engine_drift.py  test_engine_idempotency.py  test_s3_backend.py  test_schema.py  test_state.py
tests/unit/providers/: test_alb.py  test_api_gateway.py  test_dns.py  test_dynamodb.py  test_ecs.py  test_elasticache.py  test_iam.py  test_lambda.py  test_s3.py  test_sentinelapi.py
